--- a/index.html
+++ b/index.html
@@ -3,17 +3,44 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
+		function setSearchEngine(){			
+			// console.log("This is working.");
+			let engine = document.querySelector("input[name=engine]:checked").value;
+			let actions = {
+				"google": "https://www.google.com/search",
+				"duckDuckGo": "https://www.duckDuckGo.com/",
+				"bing": "https://www.bing.com/search/search",
+				"ask": "https://www.ask.com/web"
+			};
+			document.querySelector("form").setAttribute("action", actions[engine]);
+		};
+
     window.addEventListener("load", function(){
-        // TODO: register the handler
+      let form = document.querySelector("form");
+      form.addEventListener("submit", function(){
+          let engine = document.querySelector("input[name=engine]:checked");
+			if (document.querySelector("input[name=q]").value === "") {
+            	alert("Please enter a search query.")
+            	event.preventDefault();
+			    }
+			if (!engine) {            
+				alert("please select a search engine.")
+				event.preventDefault();
+			}
+			  setSearchEngine();
+		  });
     });
 	</script>
 </head>
 
 <body>
-
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
+		<form id="searchForm" action=""><!--document.querySelector("form").action = engine.value -->
+		<input type="text" name="q"/>
+		<label><input type="radio" name="engine" value="google"/>Google</label>
+		<label><input type="radio" name="engine" value="duckDuckGo"/>DuckDuckGo</label>
+		<label><input type="radio" name="engine" value="bing"/>Bing</label>
+		<label><input type="radio" name="engine" value= "ask"/>Ask</label>
+		<button>Go!</button>
 	</form>
 
 </body>
